language/move-lang/tests/move_check/parser/invalid_call_lhs_complex_expression.move
module M {
    foo() {
        (if (true) 5 else 0)();
        (while (false) {})(0, 1);
    }
}
